Fix some overflows

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,3 +11,7 @@
   display: flex;
   overflow: hidden;
 }
+
+.AppFigure > div {
+  overflow: auto !important;
+}
